added messages for tapis-meta-vdj lrq

--- a/tapis-meta-shared-lib/src/main/resources/edu/utexas/tacc/tapis/shared/i18n/TapisMessages.properties
+++ b/tapis-meta-shared-lib/src/main/resources/edu/utexas/tacc/tapis/shared/i18n/TapisMessages.properties
@@ -2458,3 +2458,11 @@ SEARCH_COND_NOMATCH=SEARCH_COND_NOMATCH No match found for search condition: {0}
 SEARCH_DB_INVALID_SEARCH_VALUE=SEARCH_DB_INVALID_SEARCH_VALUE Invalid search condition. Value could not be converted to correct type. Operator: {0} SQL Type: {1} Value: {2} Table: {3} Column: {4}
 # 0 = sql type code, 1= sql type name
 SEARCH_DB_UNSUPPORTED_SQLTYPE=SEARCH_DB_UNSUPPORTED_SQLTYPE Unsupported SQL Type. SQL type code: {0} SQL type name: {1}
+
+##########################################################################################
+# Meta V2 VDJ-LRQ Section 
+##########################################################################################
+# 0 = full Mongo Export Command, 1 = host name or URI, 2 = target database name, 3 = target collection name, 4 = exit code from Mongo Export Command
+METAV2_LRQ_MONGO_EXPORT_ERROR=METAV2_LRQ_MONGO_EXPORT_ERROR Failed to execute Mongo Export Command: {0} on Host: {1} in Database: {2} in Collection: {3} with Exit Code: {4} 
+# 0 = LRQ query
+METAV2_LRQ_SIMPLE_QUERY_ERROR=METAV2_LRQ_SIMPLE_QUERY_ERROR Simple Query: {0} has failed 
